bootstrap version update

--- a/app/templates/staff/staff_stable.html
+++ b/app/templates/staff/staff_stable.html
@@ -13,11 +13,11 @@
       <div class="row justify-content-center">
         <div class="col-md-10 col-xl-8">
           <div class="table-responsive">
-            <table class="table table-sm text-dark mt-3" style="border-color:darkgray;">
+            <table class="table table-sm mt-3">
               {% for dept_type in staff_data %}
                 <thead>
                   <tr>
-                    <th class="text-center text-dark mb-1 text-uppercase" colspan="5">{{ dept_type }}</th>
+                    <th class="text-center mb-1 text-uppercase" colspan="5">{{ dept_type }}</th>
                   </tr>
                 </thead>
                 <thead>
