Staff App: - refactoring - staff_stable_info view added

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -63,9 +63,9 @@
                 <i class="fas fa-user-friends"></i><span>Строевая записка</span>
               </a>
               <div class="dropdown-menu text-center py-0">
-{#                <a class="dropdown-item text-center py-1" href="../staff/staff_info.html">Общая информация</a>#}
-                <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_stable') }}">Постоянный состав</a>
-{#                <a class="dropdown-item text-center py-1" href="../staff/various_staff.html">Переменный состав</a>#}
+                <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_stable_info') }}">Общая информация</a>
+                <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_stable_load') }}">Постоянный состав</a>
+{#                <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_various') }}">Переменный состав</a>#}
               </div>
             </li>
             <!-- Учебные планы -->
