--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,7 +12,7 @@
       <div class="col">
         <div class="card">
           <div class="card-body p-4">
-            <a class="dropdown-item" href="{{ url_for('staff.staff_stable') }}">
+            <a class="dropdown-item" href="{{ url_for('staff.staff_stable_load') }}">
               <div class="bs-icon-md bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center d-inline-block mb-3 bs-icon">
                 <i class="fas fa-user-friends"></i>
               </div>
