Staff App: - staff_stable_report view added

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,6 +65,7 @@
               <div class="dropdown-menu text-center py-0">
                 <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_stable_info') }}">Общая информация</a>
                 <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_stable_load') }}">Постоянный состав</a>
+                <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_stable_report') }}">Постоянный состав (отчет)</a>
 {#                <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_various') }}">Переменный состав</a>#}
               </div>
             </li>
