Staff App: - stable_staff_report updated - added busy_types data edit functionality Reports: - added production calendar edit functionality

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -67,6 +67,7 @@
                 <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_stable_load') }}">Постоянный состав</a>
                 <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_stable_report') }}">Постоянный состав (отчет)</a>
 {#                <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_various') }}">Переменный состав</a>#}
+                <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_data_edit') }}">Справочник</a>
               </div>
             </li>
             <!-- Учебные планы -->
