--- a/app/templates/staff/staff_stable_report.html
+++ b/app/templates/staff/staff_stable_report.html
@@ -3,8 +3,7 @@
   <div class="container-fluid">
     <h3 class="text-center text-dark mb-1">Строевая записка постоянного состава - отчет</h3>
   </div>
-  <form method="post">
-    {{ form.hidden_tag() }}
+  <form method="get">
     <div class="container mb-3">
       <div class="row justify-content-center">
         <div class="col-md-7 col-xl-4">
@@ -18,57 +17,164 @@
       </div>
       <div class="row justify-content-center mt-2">
         <div class="col-md-7 col-xl-3 text-center d-grid">
-          {{ form.submit(class="btn btn-primary fw-bold") }}
+          <button type="submit" class="btn btn-primary fw-bold">
+            {% if busy_type or staff_id %}
+              Назад
+            {% else %}
+              Выбрать период
+            {% endif %}
+          </button>
         </div>
       </div>
     </div>
-  </form>
-  {% if busy_data %}
-    <div class="container">
+    {% if document_start_date and document_start_date and not busy_data %}
       <div class="row justify-content-center">
-        <div class="col-md-10 col-xl-8">
-          <h5 class="text-center text-black">Причины отсутствия</h5>
+        <div class="col-md-10 col-xl-8 mt-3">
+          <h5 class="text-center text-black">Нет данных</h5>
         </div>
       </div>
-      <div class="row justify-content-center">
-        <div class="col-md-10 col-xl-5">
-          {% for busy_type in busy_data %}
-            <a class="btn btn-warning mb-2" href="{{ url_for("staff.staff_stable_report", busy_type=busy_type) }}" type="submit" style="width: 100%;font-weight: bold;border-style: none;">{{ busy_types.get(busy_type, busy_type) }}</a>
-          {% endfor %}
+    {% endif %}
+    {% if busy_type %}
+      <div class="container">
+        <div class="row justify-content-center mt-2">
+          <div class="col-md-10 col-xl-8">
+            <h5 class="text-center text-black">Причина отсутствия - <b>{{ busy_types.get(busy_type, "")|lower }}</b></h5>
+            <h5 class="text-center text-black">с {{ document_start_date }} по {{ document_end_date }}</h5>
+          </div>
         </div>
-      </div>
-    </div>
-  {% endif %}
-  {% if staff_data %}
-    <div class="container">
-      <div class="row justify-content-center mt-2">
-        <div class="col-md-10 col-xl-8">
-          <h5 class="text-center text-black">Список сотрудников, отсутствовавших в указанный период</h5>
-        </div>
-      </div>
-      <div class="row justify-content-center">
-        <div class="col-md-10 col-xl-5">
-          <ul class="list-group">
-            <li class="list-group-item fs-5 text-bg-light d-flex gap-3 py-2" style="opacity: 1;">
-              <div class="fw-bold text-start d-flex gap-2 w-100 justify-content-between">
-                <span>Ф.И.О.</span><small class="text-nowrap">Кол-во дней</small>
-              </div>
-            </li>
-            {% for staff_id in staff_data %}
-              <a href="{{ url_for("staff.staff_stable_report", staff_id=staff_id) }}" class="list-group-item list-group-item-action d-flex gap-3 py-1" aria-current="true">
-                <div class="d-flex gap-2 w-100 justify-content-between">
-                  <div>
-                    <p class="mb-0 text-dark">{{ staff_data[staff_id].get("name") }}</p>
-                  </div>
-                  <small class="opacity-75 text-nowrap">{{ staff_data[staff_id].get("total") }}</small>
+        <div class="row justify-content-center">
+          <div class="col-md-10 col-xl-5">
+            <ul class="list-group">
+              <li class="list-group-item fs-5 text-bg-light d-flex gap-3 py-2" style="opacity: 1;">
+                <div class="fw-bold text-start d-flex gap-2 w-100 justify-content-between">
+                  <span>Ф.И.О.</span><small class="text-nowrap">Кол-во дней</small>
                 </div>
-              </a>
-            {% endfor %}
-          </ul>
+              </li>
+            </ul>
+            <ol class="list-group list-group-numbered">
+              {% for staff_id in busy_data.get(busy_type) %}
+                <a href="{{ url_for("staff.staff_stable_report",
+                            document_start_date=document_start_date,
+                            document_end_date=document_end_date,
+                            staff_id=staff_id)
+                         }}" class="list-group-item list-group-item-action d-flex gap-3 py-1" aria-current="true">
+                  <div class="d-flex gap-2 w-100 justify-content-between">
+                    <div>
+                      <p class="mb-0 text-dark">{{ busy_data[busy_type][staff_id].get("name") }}</p>
+                    </div>
+                    <small class="opacity-75 text-nowrap">{{ busy_data[busy_type][staff_id].get("count") }}</small>
+                  </div>
+                </a>
+              {% endfor %}
+            </ol>
+          </div>
         </div>
       </div>
-    </div>
-  {% endif %}
-  {{ busy_type }}
-  {{ staff_id }}
+    {% elif staff_id %}
+      <div class="container">
+        <div class="row justify-content-center mt-2">
+          <div class="col-md-10 col-xl-8">
+            <h5 class="fw-bold text-center text-black">{{ staff_data[staff_id].get("name") }}</h5>
+            <h5 class="text-center text-black">сведения об отсутствии с {{ document_start_date }} по {{ document_end_date }}</h5>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-xl-6">
+            <div class="table-responsive">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>Причина</th>
+                    <th>Кол-во дней</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for absence in staff_data[staff_id].get("absence") %}
+                    <tr>
+                      <td>{{ busy_types.get(absence) }}</td>
+                      <td>{{ staff_data[staff_id]["absence"][absence] }}</td>
+                    </tr>
+                  {% endfor %}
+                </tbody>
+                <thead>
+                  <tr>
+                    <th><b>Всего</b></th>
+                    <th><b>{{ staff_data[staff_id].get("total") }}</b></th>
+                  </tr>
+                </thead>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    {% else %}
+      {% if busy_data %}
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-md-10 col-xl-8">
+              <h5 class="text-center text-black">Всего строевых записок за период - {{ total_docs }}</h5>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-md-10 col-xl-8">
+              <h5 class="text-center text-black">Причины отсутствия</h5>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-md-10 col-xl-5">
+              {% for busy_type in busy_data %}
+                {% if busy_data[busy_type] %}
+                  <a class="btn btn-secondary mb-2"
+                     href="{{ url_for("staff.staff_stable_report",
+                              document_start_date=document_start_date,
+                              document_end_date=document_end_date,
+                              busy_type=busy_type)
+                           }}"
+                     role="button" style="width: 100%;font-weight: bold;">
+                    {{ busy_types.get(busy_type, busy_type) }}
+                  </a>
+                {% endif %}
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+      {% endif %}
+      {% if staff_data %}
+        <div class="container">
+          <div class="row justify-content-center mt-2">
+            <div class="col-md-10 col-xl-8">
+              <h5 class="text-center text-black">Сотрудники, отсутствовавшие в указанный период</h5>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-md-10 col-xl-5">
+              <ul class="list-group">
+                <li class="list-group-item fs-5 text-bg-light d-flex gap-3 py-2" style="opacity: 1;">
+                  <div class="fw-bold text-start d-flex gap-2 w-100 justify-content-between">
+                    <span>Ф.И.О.</span><small class="text-nowrap">Кол-во дней</small>
+                  </div>
+                </li>
+              </ul>
+              <ol class="list-group list-group-numbered">
+                {% for staff_id in staff_data %}
+                  <a href="{{ url_for("staff.staff_stable_report",
+                              document_start_date=document_start_date,
+                              document_end_date=document_end_date,
+                              staff_id=staff_id)
+                           }}" class="list-group-item list-group-item-action d-flex gap-3 py-1" aria-current="true">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                      <div>
+                        <p class="mb-0 text-dark">{{ staff_data[staff_id].get("name") }}</p>
+                      </div>
+                      <small class="opacity-75 text-nowrap">{{ staff_data[staff_id].get("total") }}</small>
+                    </div>
+                  </a>
+                {% endfor %}
+              </ol>
+            </div>
+          </div>
+        </div>
+      {% endif %}
+    {% endif %}
+  </form>
 {% endblock %}
