--- a/app/templates/auth/users_edit.html
+++ b/app/templates/auth/users_edit.html
@@ -48,7 +48,7 @@
                       {{ form.submit(class="btn btn-primary d-block w-100") }}
                     </div>
                     <div class="col">
-                      <a class="btn btn-secondary d-block w-100" role="button" href="/users">Назад</a>
+                      <a class="btn btn-secondary d-block w-100" role="button" href="{{ url_for("auth.users") }}">Назад</a>
                     </div>
                   </div>
                 </div>
