--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -52,7 +52,7 @@
               </a>
               <div class="dropdown-menu text-center py-0">
                 <a class="dropdown-item text-center py-1" href="{{ url_for('reports.load_report') }}">Нагрузка по кафедре</a>
-                {% if current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_METOD) %}
+                {% if has_permission(config.HOLIDAYS_REPORT_PERMISSION) %}
                   <a class="dropdown-item text-center py-1" href="{{ url_for('reports.holidays_report') }}">Занятость в выходные</a>
                 {% endif %}
               </div>
@@ -64,10 +64,15 @@
               </a>
               <div class="dropdown-menu text-center py-0">
                 <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_stable_info') }}">Общая информация</a>
+
                 <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_stable_load') }}">Постоянный состав</a>
-                <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_stable_report') }}">Постоянный состав (отчет)</a>
+                {% if has_permission(config.STAFF_REPORT_PERMISSION) %}
+                  <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_stable_report') }}">Постоянный состав (отчет)</a>
+                {% endif %}
 {#                <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_various') }}">Переменный состав</a>#}
-                <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_data_edit') }}">Справочник</a>
+                {% if has_permission(config.STAFF_BUSY_TYPES_EDIT_PERMISSION) %}
+                  <a class="dropdown-item text-center py-1" href="{{ url_for('staff.staff_data_edit') }}">Справочник</a>
+                {% endif %}
               </div>
             </li>
             <!-- Учебные планы -->
@@ -91,7 +96,7 @@
             <!-- Программы -->
             <li class="nav-item dropdown">
               <a class="dropdown-toggle nav-link py-2" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#">
-                <i class="fas fa-clipboard-list"></i><span>Программы</span>
+                <i class="fas fa-clipboard-list"></i><span>Рабочие программы</span>
               </a>
               <div class="dropdown-menu text-center py-0">
                 <a class="dropdown-item text-center py-1" href="{{ url_for('programs.dept_check') }}">Проверка по кафедре</a>
@@ -108,19 +113,23 @@
                 {% endif %}
               </div>
             </li>
-            {% if current_user.is_authenticated and current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_METOD, config.ROLE_BIBL) %}
+            {% if has_permission(config.LIBRARY_LOAD_SOURCES_PERMISSION, config.LIBRARY_LOAD_INTERNET_LINKS_PERMISSION, config.LIBRARY_LOAD_INFO_SYSTEMS_PERMISSION, config.LIBRARY_LOAD_SCIENCE_PRODUCTS_PERMISSION) %}
               <!-- Обеспечение -->
               <li class="nav-item dropdown">
                 <a class="dropdown-toggle nav-link py-2" aria-expanded="false" data-bs-toggle="dropdown" data-bs-auto-close="false" href="#">
                   <i class="fas fa-book-open"></i><span>Обеспечение</span>
                 </a>
                 <div class="dropdown-menu text-center py-0">
-                  {% if current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_BIBL) %}
+                  {% if has_permission(config.LIBRARY_LOAD_SOURCES_PERMISSION) %}
                     <a class="dropdown-item text-center py-1" href="{{ url_for('library.library_choose_plan') }}">Список литературы</a>
+                  {% endif %}
+                  {% if has_permission(config.LIBRARY_LOAD_INTERNET_LINKS_PERMISSION) %}
                     <a class="dropdown-item text-center py-1" href="{{ url_for('library.library_int_choose_plan') }}">Интернет ресурсы</a>
+                  {% endif %}
+                  {% if has_permission(config.LIBRARY_LOAD_INFO_SYSTEMS_PERMISSION) %}
                     <a class="dropdown-item text-center py-1" href="{{ url_for('library.library_db_choose_plan') }}">Базы и справочные системы</a>
                   {% endif %}
-                  {% if current_user.role.slug in (config.ROLE_ADMIN, config.ROLE_METOD) %}
+                  {% if has_permission(config.LIBRARY_LOAD_SCIENCE_PRODUCTS_PERMISSION) %}
                     <a class="dropdown-item text-center py-1" href="{{ url_for('library.library_np_choose_plan') }}">Научная продукция</a>
                   {% endif %}
                 </div>
@@ -162,9 +171,11 @@
                         <i class="far fa-check-square" style="font-size: 16px;color: var(--bs-green);"></i>
                       </a>
                       <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in">
-                        {% if current_user.role.slug in (config.ROLE_ADMIN, ) %}
+                        {% if has_permission(config.USERS_EDIT_PERMISSION) %}
                           <a class="dropdown-item" href="{{ url_for('auth.users') }}">
                             <i class="fas fa-user-alt fa-sm fa-fw me-2 text-gray-400"></i>Пользователи</a>
+                          <a class="dropdown-item" href="{{ url_for('auth.roles') }}">
+                            <i class="fas fa-user-alt fa-sm fa-fw me-2 text-gray-400"></i>Роли (группы)</a>
                         {% endif %}
                         <a class="dropdown-item" href="{{ url_for('auth.logout') }}">
                           <i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>Выйти</a>
