--- a/app/templates/reports/production_calendar_view.html
+++ b/app/templates/reports/production_calendar_view.html
@@ -4,7 +4,9 @@
     <tr>
       <th>id</th>
       <th>Дата</th>
-      <th>Действия</th>
+      {% if has_permission(config.PRODUCTION_CALENDAR_EDIT_PERMISSION) %}
+        <th>Действия</th>
+      {% endif %}
     </tr>
   </thead>
   <tbody>
@@ -12,17 +14,21 @@
       <tr>
         <td>{{ obj.id }}</td>
         <td class="text-start">{{ obj.date }}</td>
-        <td>
-          <div class="btn-group" role="group">
-            <a class="btn btn-secondary btn-sm" role="button" href="{{ url_for('.' + base_view_slug + "_edit", id_=obj.id) }}">Редактировать</a>
-            <a class="btn btn-danger btn-sm" role="button" href="{{ url_for('.' + base_view_slug + "_delete", id_=obj.id) }}">Удалить</a
-          </div>
-        </td>
+        {% if has_permission(config.PRODUCTION_CALENDAR_EDIT_PERMISSION) %}
+          <td>
+            <div class="btn-group" role="group">
+              <a class="btn btn-secondary btn-sm" role="button" href="{{ url_for('.' + base_view_slug + "_edit", id_=obj.id) }}">Редактировать</a>
+              <a class="btn btn-danger btn-sm" role="button" href="{{ url_for('.' + base_view_slug + "_delete", id_=obj.id) }}">Удалить</a>
+            </div>
+          </td>
+        {% endif %}
       </tr>
     {% endfor %}
   </tbody>
 {% endblock %}
 {% block footer_buttons %}
-  <a class="btn btn-primary" role="button" href="{{ url_for('.' + base_view_slug + '_add') }}">Добавить</a>
+  {% if has_permission(config.PRODUCTION_CALENDAR_EDIT_PERMISSION) %}
+    <a class="btn btn-primary" role="button" href="{{ url_for('.' + base_view_slug + '_add') }}">Добавить</a>
+  {% endif %}
   <a class="btn btn-secondary" role="button" href="{{ url_for('.holidays_report') }}">Назад</a>
 {% endblock %}
